tests/invalid/annotation_callable_params_not_list/main.py
def bad(x: callable[int, int]) -> None:
    x


def main() -> None:
    y: int = 0
